fix: Correct Stars vertical alignment

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -584,7 +584,6 @@ body {
   height: 16px;
   margin-right: 0.25rem;
   margin-top: 0px;
-  vertical-align: bottom;
 }
 
 .reviews-star-rating-individual-icon-full {
